<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityPage"
    tools:context="com.gamesbykevin.connect.activity.MainActivity">

    <include layout="@layout/layout_logo" />

    <TableLayout style="@style/TableMenu">
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonStart" style="@style/ButtonMenu" android:text="@string/button_text_start" android:onClick="onClickStart" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonOptions" style="@style/ButtonMenu" android:text="@string/button_text_options" android:onClick="onClickOptions" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonRate" style="@style/ButtonMenu" android:text="@string/button_text_rate" android:onClick="onClickRate" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonMore" style="@style/ButtonMenu" android:text="@string/button_text_more" android:onClick="onClickMore" />
        </TableRow>
        <TableRow style="@style/RowMenu">
            <Button android:id="@+id/ButtonExit" style="@style/ButtonMenu" android:text="@string/button_text_exit" android:onClick="onClickExit" />
        </TableRow>
    </TableLayout>

    <include layout="@layout/layout_social_icons" />
</LinearLayout>